grammar.js
        source_file: ($) =>
            seq(
                optional($.container_doc_comment),
                optional($._container_members),
            ),

        _container_members: ($) =>
            seq(
                choice(
                    seq(
                        repeat1($._container_member),
                        optional($.container_field),
                    ),
                    $.container_field,
                ),
            ),

        container_field: ($) =>
            prec(
                PREC.assignment,
                seq(
                    optional($.doc_comment),
                    optional("comptime"),
                    optional($._name),
                    field("type", $.type),
                    optional($.byte_align),
                    optional(seq("=", field("value", $.expression))),
                ),
            ),

        _name: ($) => prec(1, seq(field("name", $._identifier), ":")),

        comptime_declaration: ($) => seq("comptime", field("body", $.block)),

        test_declaration: ($) =>
            seq(
                "test",
                optional(
                    field(
                        "doctest_name",
                        choice($.string_literal, $.identifier),
                    ),
                ),
                field("body", $.block),
            ),

        // Declarations

        global_variable_declaration: ($) =>
            seq(
                optional($.doc_comment),
                optional("pub"),
                optional("export"),
                optional("threadlocal"),
                $._variable_declaration_proto,
                "=",
                field("value", $.expression),
                ";",
            ),

        extern_function_declaration: ($) =>
            seq(
                optional($.doc_comment),
                optional("pub"),
                "extern",
                optional(field("layout", $.string_literal)),
                $._function_proto,
                ";",
            ),

        function_declaration: ($) =>
            seq(
                optional($.doc_comment),
                optional("pub"),
                optional(choice("inline", "noinline", "export")),
                $._function_proto,
                $.block,
            ),

        // Expressions

        init_list_expression: ($) =>
            prec(PREC.init, seq($.expression, $.init_list)),

        break_expression: ($) =>
            prec.right(
                seq("break", optional($.break_label), optional($.expression)),
            ),
        continue_expression: ($) =>
            prec.right(
                seq(
                    "continue",
                    optional($.break_label),
                    optional($.expression),
                ),
            ),

        comptime_expression: ($) => seq("comptime", $.expression),

        for_expression: ($) =>
            prec.right(
                seq(
                    $._for_prefix,
                    field("value", $.expression),
                    field("alternative", optional(seq("else", $.expression))),
                ),
            ),

        return_expression: ($) =>
            prec.right(seq("return", optional($.expression))),

        try_expression: ($) => seq("try", $.expression),

        unary_expression: ($) =>
            prec(
                PREC.unary,
                seq(choice("!", "-", "-%", "~", "&"), $.expression),
            ),

        binary_expression: ($) => {
            const table = [
                [PREC.multiplicative, choice(...multiplicative_operators)],
                [PREC.additive, choice(...additive_operators)],
                [PREC.shift, choice(...shift_operators)],
                [PREC.bitwise, choice(...bitwise_operators, "orelse")],
                [PREC.comparison, choice(...comparison_operators)],
                [PREC.and, "and"],
                [PREC.or, "or"],
            ];
            return choice(
                ...table.map(([precedence, operator]) =>
                    prec.left(
                        precedence,
                        seq(
                            field("left", $.expression),
                            field("operator", operator),
                            field("right", $.expression),
                        ),
                    ),
                ),
            );
        },

        switch_expression: ($) =>
            seq(
                optional($.block_label),
                "switch",
                "(",
                field("value", $.expression),
                ")",
                "{",
                optional(sepByCommaTrailing($.switch_case)),
                "}",
            ),
        switch_case: ($) =>
            seq(
                optional("inline"),
                field("pattern", $._switch_item),
                "=>",
                optional($.ptr_index_payload),
                field(
                    "value",
                    choice($.expression, $._single_assignment_expression),
                ),
            ),

        _single_assignment_expression: ($) =>
            seq(
                field("left", $.expression),
                field("operator", choice(...assign_operators, "=")),
                field("right", $.expression),
            ),

        _switch_item: ($) =>
            choice(
                seq(
                    sepByCommaTrailing(
                        seq($.expression, optional(seq("...", $.expression))),
                    ),
                ),
                "else",
            ),

        init_list: ($) => seq("{", optional($._list_item), "}"),

        _list_item: ($) =>
            choice(
                sepByCommaTrailing($.list_item),
                sepByCommaTrailing($.expression),
            ),

        list_item: ($) =>
            seq(".", field("field", $._identifier), "=", $.expression),

        // Types

        inferred_superset: ($) => seq(".", $._identifier),

        inferred_init_list: ($) => seq(".", $.init_list),

        block_type_expression: ($) => seq($.block_label, $.block),

        if_type_expression: ($) =>
            prec.right(
                seq(
                    $._if_prefix,
                    field("value", $.type),
                    field(
                        "alternative",
                        optional(seq("else", optional($.payload), $.type)),
                    ),
                ),
            ),

        union_type: ($) =>
            seq(
                optional(choice("extern", "packed")),
                "union",
                field("tag", optional($._union_tagged)),
                $._container_type_members,
            ),

        _union_tagged: ($) =>
            seq(
                "(",
                choice(
                    $.expression,
                    seq("enum", optional(seq("(", $.expression, ")"))),
                ),
                ")",
            ),

        struct_type: ($) =>
            seq(optional("extern"), "struct", $._container_type_members),

        opaque_type: ($) => seq("opaque", $._container_type_members),

        enum_type: ($) =>
            seq(
                "enum",
                optional(seq("(", $.expression, ")")),
                $._container_type_members,
            ),

        _container_type_members: ($) =>
            seq(
                "{",
                optional($.container_doc_comment),
                optional($._container_members),
                "}",
            ),

        builtin_function: ($) =>
            seq($.builtin_identifier, $._call_function_suffix),

        unwrap_expression: ($) =>
            prec(PREC.call, seq($.type, choice(".*", seq(".", "?")))),
        access_expression: ($) =>
            prec(PREC.call, seq($.type, ".", field("field", $._identifier))),
        call_expression: ($) =>
            prec(PREC.call, seq($.type, $._call_function_suffix)),
        index_expression: ($) =>
            prec(PREC.call, seq($.type, "[", $.index_range, "]")),

        index_range: ($) =>
            seq(
                $.expression,
                optional(
                    seq(
                        "..",
                        seq(
                            optional($.expression),
                            optional(seq(":", $.expression)),
                        ),
                    ),
                ),
            ),

        error_subset: ($) => seq("error", ".", $._identifier),
        error_union: ($) =>
            prec.right(PREC.err_union, seq($.type, "!", $.type)),
        error_set_declaration: ($) =>
            seq(
                "error",
                "{",
                optional(
                    sepByCommaTrailing(
                        seq(optional($.doc_comment), $._identifier),
                    ),
                ),
                "}",
            ),

        optional_type: ($) => seq("?", $.type),

        array_type: ($) =>
            seq("[", $.expression, optional($._array_sentinel), "]", $.type),

        _array_sentinel: ($) => seq(":", $.expression),

        ptr_mods: ($) =>
            repeat1(
                choice(
                    $.byte_align,
                    $.addr_space,
                    "const",
                    "volatile",
                    "allowzero",
                ),
            ),

        slice_type: ($) =>
            seq(
                "[",
                optional(seq(":", $.expression)),
                "]",
                optional($.ptr_mods),
                $.type,
            ),

        many_pointer_type: ($) =>
            seq(
                "[",
                "*",
                optional(choice("c", seq(":", $.expression))),
                "]",
                optional($.ptr_mods),
                $.type,
            ),

        pointer_type: ($) => seq("*", optional($.single_ptr_mods), $.type),

        block: ($) =>
            seq(
                "{",
                repeat(
                    choice(
                        $.variable_assignment_statement,
                        $.defer_statement,
                        $.errdefer_statement,
                        $.statement,
                    ),
                ),
                "}",
            ),

        variable_assignment_statement: ($) =>
            prec(
                PREC.assignment,
                seq(
                    optional("comptime"),
                    sepByComma(
                        choice($.expression, $._variable_declaration_proto),
                    ),
                    "=",
                    field("value", $.expression),
                    ";",
                ),
            ),

        _block_expression_statement: ($) =>
            prec(
                1,
                choice(
                    seq(optional($.block_label), $.block),
                    seq($._assign_expression, ";"),
                ),
            ),

        defer_statement: ($) => seq("defer", $._block_expression_statement),
        block_expression: ($) => prec(1, seq(optional($.block_label), $.block)),

        if_statement: ($) =>
            seq(
                $._if_prefix,
                choice(
                    seq(
                        field("consequence", $.block_expression),
                        optional(
                            field(
                                "alternative",
                                seq("else", optional($.payload), $.statement),
                            ),
                        ),
                    ),
                    seq(
                        field("consequence", $._assign_expression),
                        choice(
                            ";",
                            field(
                                "alternative",
                                seq("else", optional($.payload), $.statement),
                            ),
                        ),
                    ),
                ),
            ),

        for_statement: ($) =>
            seq(
                $._for_prefix,
                choice(
                    seq(
                        field("value", $.block_expression),
                        field(
                            "alternative",
                            optional(seq("else", $.statement)),
                        ),
                    ),
                    seq(
                        field("value", $._assign_expression),
                        choice(
                            ";",
                            field("alternative", seq("else", $.statement)),
                        ),
                    ),
                ),
            ),

        while_statement: ($) =>
            seq(
                $._while_prefix,
                choice(
                    seq(
                        field("value", $.block_expression),
                        field(
                            "alternative",
                            optional(
                                seq("else", optional($.payload), $.statement),
                            ),
                        ),
                    ),
                    seq(
                        $._assign_expression,
                        choice(
                            ";",
                            field(
                                "alternative",
                                seq("else", optional($.payload), $.statement),
                            ),
                        ),
                    ),
                ),
            ),

        expression_statement: ($) => seq($.expression, ";"),

        _assign_expression: ($) =>
            prec(1, choice($._assign_expr, $.expression)),
        primitive_type: ($) =>
            token(
                prec(
                    1,
                    choice(
                        "isize",
                        "usize",
                        "c_char",
                        "c_short",
                        "c_ushort",
                        "c_int",
                        "c_uint",
                        "c_long",
                        "c_ulong",
                        "c_longlong",
                        "c_ulonglong",
                        "c_longdouble",
                        "f16",
                        "f32",
                        "f64",
                        "f80",
                        "f128",
                        "bool",
                        "anyopaque",
                        "void",
                        "noreturn",
                        "type",
                        "anyerror",
                        "comptime_int",
                        "comptime_float",
                        /[iu][0-9]+/,
                    ),
                ),
            ),

        unreachable_literal: ($) => "unreachable",

        integer_literal: ($) =>
            token(
                seq(
                    /[0-9]/,
                    repeat(choice(/[_0-9A-DF-OQ-Za-df-oq-z]/, /[eEpP][+-]?/)),
                ),
            ),

        float_literal: ($) =>
            token(
                seq(
                    /[0-9]/,
                    repeat(choice(/[_0-9A-DF-OQ-Za-df-oq-z]/, /[eEpP][+-]?/)),
                    ".",
                    repeat1(choice(/[_0-9A-DF-OQ-Za-df-oq-z]/, /[eEpP][+-]?/)),
                ),
            ),

        char_literal: ($) => seq("'", choice($.escape_sequence, /[^'\\]/), "'"),

        string_literal: ($) =>
            seq(
                '"',
                repeat(
                    choice(
                        alias(
                            token.immediate(prec(1, /[^"\n\\]+/)),
                            $.string_literal_content,
                        ),
                        $.escape_sequence,
                    ),
                ),
                token.immediate('"'),
            ),
