test/corpus/langref.txt
============
Identifiers
============

const @"identifier with spaces in it" = 0xff;
const @"1SmallStep4Man" = 112358;

const c = @import("std").c;
pub extern "c" fn @"error"() void;
pub extern "c" fn @"fstat$INODE64"(fd: c.fd_t, buf: *c.Stat) c_int;

const Color = enum {
    red,
    @"really red",
};
const color: Color = .@"really red";

---

(source_file
  (global_variable_declaration
    name: (identifier)
    value: (integer_literal))
  (global_variable_declaration
    name: (identifier)
    value: (integer_literal))
  (global_variable_declaration
    name: (identifier)
    value: (access_expression
      (builtin_function
        (builtin_identifier)
        (string_literal
          (string_literal_content)))
      field: (identifier)))
  (extern_function_declaration
    layout: (string_literal
      (string_literal_content))
    name: (identifier)
    parameters: (parameters)
    return_type: (primitive_type))
  (extern_function_declaration
    layout: (string_literal
      (string_literal_content))
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (access_expression
          (identifier)
          field: (identifier)))
      (parameter
        name: (identifier)
        type: (pointer_type
          (access_expression
            (identifier)
            field: (identifier)))))
    return_type: (primitive_type))
  (global_variable_declaration
    name: (identifier)
    value: (enum_type
      (container_field
        type: (identifier))
      (container_field
        type: (identifier))))
  (global_variable_declaration
    name: (identifier)
    type: (identifier)
    value: (inferred_superset
      (identifier))))

=======
Values
=======

// Custom error set definition:
const ExampleErrorSet = error{
    ExampleErrorVariant,
};

pub fn main() void {
    // integers
    const one_plus_one: i32 = 1 + 1;
    print("1 + 1 = {}\n", .{one_plus_one});

    // floats
    const seven_div_three: f32 = 7.0 / 3.0;
    print("7.0 / 3.0 = {}\n", .{seven_div_three});

    // boolean
    print("{}\n{}\n{}\n", .{
        true and false,
        true or false,
        !true,
    });

    // optional
    var optional_value: ?[]const u8 = null;
    assert(optional_value == null);

    print("\noptional 1\ntype: {}\nvalue: {?s}\n", .{
        @TypeOf(optional_value), optional_value,
    });

    optional_value = "hi";
    assert(optional_value != null);

    print("\noptional 2\ntype: {}\nvalue: {?s}\n", .{
        @TypeOf(optional_value), optional_value,
    });

    // error union
    var number_or_error: ExampleErrorSet!i32 = ExampleErrorSet.ExampleErrorVariant;

    print("\nerror union 1\ntype: {}\nvalue: {!}\n", .{
        @TypeOf(number_or_error),
        number_or_error,
    });

    number_or_error = 1234;

    print("\nerror union 2\ntype: {}\nvalue: {!}\n", .{
        @TypeOf(number_or_error), number_or_error,
    });
}

---

(source_file
  (line_comment)
  (global_variable_declaration
    name: (identifier)
    value: (error_set_declaration
      (identifier)))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (primitive_type)
    (block
      (line_comment)
      (variable_assignment_statement
        name: (identifier)
        type: (primitive_type)
        value: (binary_expression
          left: (integer_literal)
          right: (integer_literal)))
      (expression_statement
        (call_expression
          (identifier)
          (string_literal
            (string_literal_content)
            (escape_sequence))
          (inferred_init_list
            (init_list
              (identifier)))))
      (line_comment)
      (variable_assignment_statement
        name: (identifier)
        type: (primitive_type)
        value: (binary_expression
          left: (float_literal)
          right: (float_literal)))
      (expression_statement
        (call_expression
          (identifier)
          (string_literal
            (string_literal_content)
            (escape_sequence))
          (inferred_init_list
            (init_list
              (identifier)))))
      (line_comment)
      (expression_statement
        (call_expression
          (identifier)
          (string_literal
            (string_literal_content)
            (escape_sequence)
            (string_literal_content)
            (escape_sequence)
            (string_literal_content)
            (escape_sequence))
          (inferred_init_list
            (init_list
              (binary_expression
                left: (identifier)
                right: (identifier))
              (binary_expression
                left: (identifier)
                right: (identifier))
              (unary_expression
                (identifier))))))
      (line_comment)
      (variable_assignment_statement
        name: (identifier)
        type: (optional_type
          (slice_type
            (ptr_mods)
            (primitive_type)))
        value: (identifier))
      (expression_statement
        (call_expression
          (identifier)
          (binary_expression
            left: (identifier)
            right: (identifier))))
      (expression_statement
        (call_expression
          (identifier)
          (string_literal
            (escape_sequence)
            (string_literal_content)
            (escape_sequence)
            (string_literal_content)
            (escape_sequence)
            (string_literal_content)
            (escape_sequence))
          (inferred_init_list
            (init_list
              (builtin_function
                (builtin_identifier)
                (identifier))
              (identifier)))))
      (variable_assignment_statement
        (identifier)
        value: (string_literal
          (string_literal_content)))
      (expression_statement
        (call_expression
          (identifier)
          (binary_expression
            left: (identifier)
            right: (identifier))))
      (expression_statement
        (call_expression
          (identifier)
          (string_literal
            (escape_sequence)
            (string_literal_content)
            (escape_sequence)
            (string_literal_content)
            (escape_sequence)
            (string_literal_content)
            (escape_sequence))
          (inferred_init_list
            (init_list
              (builtin_function
                (builtin_identifier)
                (identifier))
              (identifier)))))
      (line_comment)
      (variable_assignment_statement
        name: (identifier)
        type: (error_union
          (identifier)
          (primitive_type))
        value: (access_expression
          (identifier)
          field: (identifier)))
      (expression_statement
        (call_expression
          (identifier)
          (string_literal
            (escape_sequence)
            (string_literal_content)
            (escape_sequence)
            (string_literal_content)
            (escape_sequence)
            (string_literal_content)
            (escape_sequence))
          (inferred_init_list
            (init_list
              (builtin_function
                (builtin_identifier)
                (identifier))
              (identifier)))))
      (variable_assignment_statement
        (identifier)
        value: (integer_literal))
      (expression_statement
        (call_expression
          (identifier)
          (string_literal
            (escape_sequence)
            (string_literal_content)
            (escape_sequence)
            (string_literal_content)
            (escape_sequence)
            (string_literal_content)
            (escape_sequence))
          (inferred_init_list
            (init_list
              (builtin_function
                (builtin_identifier)
                (identifier))
              (identifier))))))))

=======
Arrays
=======

// array literal
const message = [_]u8{ 'h', 'e', 'l', 'l', 'o' };

// alternative initialization using result location
const alt_message: [5]u8 = .{ 'h', 'e', 'l', 'l', 'o' };

comptime {
    assert(mem.eql(u8, &message, &alt_message));
}

comptime {
    assert(mem.eql(u8, &message, same_message));
}

test "iterate over an array" {
    var sum: usize = 0;
    for (message) |byte| {
        sum += byte;
    }
    try expectEqual('h' + 'e' + 'l' * 2 + 'o', sum);
}

// modifiable array
var some_integers: [100]i32 = undefined;

test "modify an array" {
    for (&some_integers, 0..) |*item, i| {
        item.* = @intCast(i);
    }
    try expectEqual(10, some_integers[10]);
    try expectEqual(99, some_integers[99]);
}

const part_one = [_]i32{ 1, 2, 3, 4 };
const part_two = [_]i32{ 5, 6, 7, 8 };
const all_of_it = part_one ++ part_two;
comptime {
    assert(mem.eql(i32, &all_of_it, &[_]i32{ 1, 2, 3, 4, 5, 6, 7, 8 }));
}

const hello_world = hello ++ " " ++ world;
comptime {
    assert(mem.eql(u8, hello_world, "hello world"));
}

const all_zero: [10]u16 = @splat(0);

comptime {
    assert(all_zero.len == 10);
    assert(all_zero[5] == 0);
}

// use compile-time code to initialize an array
var fancy_array = init: {
    var initial_value: [10]Point = undefined;
    for (&initial_value, 0..) |*pt, i| {
        pt.* = Point{
            .x = @intCast(i),
            .y = @intCast(i * 2),
        };
    }
    break :init initial_value;
};
const Point = struct {
    x: i32,
    y: i32,
};

var more_points: [10]Point = @splat(makePoint(3));
fn makePoint(x: i32) Point {
    return Point{
        .x = x,
        .y = x * 2,
    };
}
test "array initialization with function calls" {
    try expectEqual(3, more_points[4].x);
    try expectEqual(10, more_points.len);
}

const mat4x5 = [4][5]f32{
    [_]f32{ 1.0, 0.0, 0.0, 0.0, 0.0 },
    [_]f32{ 0.0, 1.0, 0.0, 1.0, 0.0 },
    [_]f32{ 0.0, 0.0, 1.0, 0.0, 0.0 },
    [_]f32{ 0.0, 0.0, 0.0, 1.0, 9.9 },
};
test "multidimensional arrays" {
    // mat4x5 itself is a one-dimensional array of arrays.
    try expectEqual(mat4x5[1], [_]f32{ 0.0, 1.0, 0.0, 1.0, 0.0 });

    // Access the 2D array by indexing the outer array, and then the inner array.
    try expectEqual(9.9, mat4x5[3][4]);

    // Here we iterate with for loops.
    for (mat4x5, 0..) |row, row_index| {
        for (row, 0..) |cell, column_index| {
            if (row_index == column_index) {
                try expectEqual(1.0, cell);
            }
        }
    }

    // Initialize a multidimensional array to zeros.
    const all_zero: [4][5]f32 = .{.{0} ** 5} ** 4;
    try expectEqual(0, all_zero[0][0]);
}

test "0-terminated sentinel array" {
    const array = [_:0]u8{ 1, 2, 3, 4 };

    try expectEqual([4:0]u8, @TypeOf(array));
    try expectEqual(4, array.len);
    try expectEqual(0, array[4]);
}

test "extra 0s in 0-terminated sentinel array" {
    // The sentinel value may appear earlier, but does not influence the compile-time 'len'.
    const array = [_:0]u8{ 1, 0, 0, 4 };

    try expectEqual([4:0]u8, @TypeOf(array));
    try expectEqual(4, array.len);
    try expectEqual(0, array[4]);
}

fn swizzleRgbaToBgra(rgba: [4]u8) [4]u8 {
    // readable swizzling by destructuring
    const r, const g, const b, const a = rgba;
    return .{ b, g, r, a };
}

pub fn main() void {
    const pos = [_]i32{ 1, 2 };
    const x, const y = pos;
    print("x = {}, y = {}\n", .{x, y});

    const orange: [4]u8 = .{ 255, 165, 0, 255 };
    print("{any}\n", .{swizzleRgbaToBgra(orange)});
}

---

(source_file
  (line_comment)
  (global_variable_declaration
    name: (identifier)
    value: (init_list_expression
      (array_type
        (identifier)
        (primitive_type))
      (init_list
        (char_literal)
        (char_literal)
        (char_literal)
        (char_literal)
        (char_literal))))
  (line_comment)
  (global_variable_declaration
    name: (identifier)
    type: (array_type
      (integer_literal)
      (primitive_type))
    value: (inferred_init_list
      (init_list
        (char_literal)
        (char_literal)
        (char_literal)
        (char_literal)
        (char_literal))))
  (comptime_declaration
    body: (block
      (expression_statement
        (call_expression
          (identifier)
          (call_expression
            (access_expression
              (identifier)
              field: (identifier))
            (primitive_type)
            (unary_expression
              (identifier))
            (unary_expression
              (identifier)))))))
  (comptime_declaration
    body: (block
      (expression_statement
        (call_expression
          (identifier)
          (call_expression
            (access_expression
              (identifier)
              field: (identifier))
            (primitive_type)
            (unary_expression
              (identifier))
            (identifier))))))
  (test_declaration
    doctest_name: (string_literal
      (string_literal_content))
    body: (block
      (variable_assignment_statement
        name: (identifier)
        type: (primitive_type)
        value: (integer_literal))
      (for_statement
        pattern: (for_item
          (identifier))
        (ptr_list_payload
          (identifier))
        value: (block_expression
          (block
            (variable_assignment_statement
              left: (identifier)
              right: (identifier)))))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (binary_expression
              left: (binary_expression
                left: (binary_expression
                  left: (char_literal)
                  right: (char_literal))
                right: (binary_expression
                  left: (char_literal)
                  right: (integer_literal)))
              right: (char_literal))
            (identifier))))))
  (line_comment)
  (global_variable_declaration
    name: (identifier)
    type: (array_type
      (integer_literal)
      (primitive_type))
    value: (identifier))
  (test_declaration
    doctest_name: (string_literal
      (string_literal_content))
    body: (block
      (for_statement
        pattern: (for_item
          (unary_expression
            (identifier)))
        pattern: (for_item
          (integer_literal))
        (ptr_list_payload
          (identifier)
          (identifier))
        value: (block_expression
          (block
            (variable_assignment_statement
              (unwrap_expression
                (identifier))
              value: (builtin_function
                (builtin_identifier)
                (identifier))))))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (integer_literal)
            (index_expression
              (identifier)
              (index_range
                (integer_literal))))))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (integer_literal)
            (index_expression
              (identifier)
              (index_range
                (integer_literal))))))))
  (global_variable_declaration
    name: (identifier)
    value: (init_list_expression
      (array_type
        (identifier)
        (primitive_type))
      (init_list
        (integer_literal)
        (integer_literal)
        (integer_literal)
        (integer_literal))))
  (global_variable_declaration
    name: (identifier)
    value: (init_list_expression
      (array_type
        (identifier)
        (primitive_type))
      (init_list
        (integer_literal)
        (integer_literal)
        (integer_literal)
        (integer_literal))))
  (global_variable_declaration
    name: (identifier)
    value: (binary_expression
      left: (identifier)
      right: (identifier)))
  (comptime_declaration
    body: (block
      (expression_statement
        (call_expression
          (identifier)
          (call_expression
            (access_expression
              (identifier)
              field: (identifier))
            (primitive_type)
            (unary_expression
              (identifier))
            (unary_expression
              (init_list_expression
                (array_type
                  (identifier)
                  (primitive_type))
                (init_list
                  (integer_literal)
                  (integer_literal)
                  (integer_literal)
                  (integer_literal)
                  (integer_literal)
                  (integer_literal)
                  (integer_literal)
                  (integer_literal)))))))))
  (global_variable_declaration
    name: (identifier)
    value: (binary_expression
      left: (binary_expression
        left: (identifier)
        right: (string_literal
          (string_literal_content)))
      right: (identifier)))
  (comptime_declaration
    body: (block
      (expression_statement
        (call_expression
          (identifier)
          (call_expression
            (access_expression
              (identifier)
              field: (identifier))
            (primitive_type)
            (identifier)
            (string_literal
              (string_literal_content)))))))
  (global_variable_declaration
    name: (identifier)
    type: (array_type
      (integer_literal)
      (primitive_type))
    value: (builtin_function
      (builtin_identifier)
      (integer_literal)))
  (comptime_declaration
    body: (block
      (expression_statement
        (call_expression
          (identifier)
          (binary_expression
            left: (access_expression
              (identifier)
              field: (identifier))
            right: (integer_literal))))
      (expression_statement
        (call_expression
          (identifier)
          (binary_expression
            left: (index_expression
              (identifier)
              (index_range
                (integer_literal)))
            right: (integer_literal))))))
  (line_comment)
  (global_variable_declaration
    name: (identifier)
    value: (block_type_expression
      (block_label
        (identifier))
      (block
        (variable_assignment_statement
          name: (identifier)
          type: (array_type
            (integer_literal)
            (identifier))
          value: (identifier))
        (for_statement
          pattern: (for_item
            (unary_expression
              (identifier)))
          pattern: (for_item
            (integer_literal))
          (ptr_list_payload
            (identifier)
            (identifier))
          value: (block_expression
            (block
              (variable_assignment_statement
                (unwrap_expression
                  (identifier))
                value: (init_list_expression
                  (identifier)
                  (init_list
                    (list_item
                      field: (identifier)
                      (builtin_function
                        (builtin_identifier)
                        (identifier)))
                    (list_item
                      field: (identifier)
                      (builtin_function
                        (builtin_identifier)
                        (binary_expression
                          left: (identifier)
                          right: (integer_literal))))))))))
        (expression_statement
          (break_expression
            (break_label
              (identifier))
            (identifier))))))
  (global_variable_declaration
    name: (identifier)
    value: (struct_type
      (container_field
        name: (identifier)
        type: (primitive_type))
      (container_field
        name: (identifier)
        type: (primitive_type))))
  (global_variable_declaration
    name: (identifier)
    type: (array_type
      (integer_literal)
      (identifier))
    value: (builtin_function
      (builtin_identifier)
      (call_expression
        (identifier)
        (integer_literal))))
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (primitive_type)))
    return_type: (identifier)
    (block
      (expression_statement
        (return_expression
          (init_list_expression
            (identifier)
            (init_list
              (list_item
                field: (identifier)
                (identifier))
              (list_item
                field: (identifier)
                (binary_expression
                  left: (identifier)
                  right: (integer_literal)))))))))
  (test_declaration
    doctest_name: (string_literal
      (string_literal_content))
    body: (block
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (integer_literal)
            (access_expression
              (index_expression
                (identifier)
                (index_range
                  (integer_literal)))
              field: (identifier)))))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (integer_literal)
            (access_expression
              (identifier)
              field: (identifier)))))))
  (global_variable_declaration
    name: (identifier)
    value: (init_list_expression
      (array_type
        (integer_literal)
        (array_type
          (integer_literal)
          (primitive_type)))
      (init_list
        (init_list_expression
          (array_type
            (identifier)
            (primitive_type))
          (init_list
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)))
        (init_list_expression
          (array_type
            (identifier)
            (primitive_type))
          (init_list
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)))
        (init_list_expression
          (array_type
            (identifier)
            (primitive_type))
          (init_list
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)))
        (init_list_expression
          (array_type
            (identifier)
            (primitive_type))
          (init_list
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal)
            (float_literal))))))
  (test_declaration
    doctest_name: (string_literal
      (string_literal_content))
    body: (block
      (line_comment)
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (index_expression
              (identifier)
              (index_range
                (integer_literal)))
            (init_list_expression
              (array_type
                (identifier)
                (primitive_type))
              (init_list
                (float_literal)
                (float_literal)
                (float_literal)
                (float_literal)
                (float_literal))))))
      (line_comment)
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (float_literal)
            (index_expression
              (index_expression
                (identifier)
                (index_range
                  (integer_literal)))
              (index_range
                (integer_literal))))))
      (line_comment)
      (for_statement
        pattern: (for_item
          (identifier))
        pattern: (for_item
          (integer_literal))
        (ptr_list_payload
          (identifier)
          (identifier))
        value: (block_expression
          (block
            (for_statement
              pattern: (for_item
                (identifier))
              pattern: (for_item
                (integer_literal))
              (ptr_list_payload
                (identifier)
                (identifier))
              value: (block_expression
                (block
                  (if_statement
                    condition: (binary_expression
                      left: (identifier)
                      right: (identifier))
                    consequence: (block_expression
                      (block
                        (expression_statement
                          (try_expression
                            (call_expression
                              (identifier)
                              (float_literal)
                              (identifier)))))))))))))
      (line_comment)
      (variable_assignment_statement
        name: (identifier)
        type: (array_type
          (integer_literal)
          (array_type
            (integer_literal)
            (primitive_type)))
        value: (binary_expression
          left: (inferred_init_list
            (init_list
              (binary_expression
                left: (inferred_init_list
                  (init_list
                    (integer_literal)))
                right: (integer_literal))))
          right: (integer_literal)))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (integer_literal)
            (index_expression
              (index_expression
                (identifier)
                (index_range
                  (integer_literal)))
              (index_range
                (integer_literal))))))))
  (test_declaration
    doctest_name: (string_literal
      (string_literal_content))
    body: (block
      (variable_assignment_statement
        name: (identifier)
        value: (init_list_expression
          (array_type
            (identifier)
            (integer_literal)
            (primitive_type))
          (init_list
            (integer_literal)
            (integer_literal)
            (integer_literal)
            (integer_literal))))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (array_type
              (integer_literal)
              (integer_literal)
              (primitive_type))
            (builtin_function
              (builtin_identifier)
              (identifier)))))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (integer_literal)
            (access_expression
              (identifier)
              field: (identifier)))))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (integer_literal)
            (index_expression
              (identifier)
              (index_range
                (integer_literal))))))))
  (test_declaration
    doctest_name: (string_literal
      (string_literal_content))
    body: (block
      (line_comment)
      (variable_assignment_statement
        name: (identifier)
        value: (init_list_expression
          (array_type
            (identifier)
            (integer_literal)
            (primitive_type))
          (init_list
            (integer_literal)
            (integer_literal)
            (integer_literal)
            (integer_literal))))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (array_type
              (integer_literal)
              (integer_literal)
              (primitive_type))
            (builtin_function
              (builtin_identifier)
              (identifier)))))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (integer_literal)
            (access_expression
              (identifier)
              field: (identifier)))))
      (expression_statement
        (try_expression
          (call_expression
            (identifier)
            (integer_literal)
            (index_expression
              (identifier)
              (index_range
                (integer_literal))))))))
  (function_declaration
    name: (identifier)
    parameters: (parameters
      (parameter
        name: (identifier)
        type: (array_type
          (integer_literal)
          (primitive_type))))
    return_type: (array_type
      (integer_literal)
      (primitive_type))
    (block
      (line_comment)
      (variable_assignment_statement
        name: (identifier)
        name: (identifier)
        name: (identifier)
        name: (identifier)
        value: (identifier))
      (expression_statement
        (return_expression
          (inferred_init_list
            (init_list
              (identifier)
              (identifier)
              (identifier)
              (identifier)))))))
  (function_declaration
    name: (identifier)
    parameters: (parameters)
    return_type: (primitive_type)
    (block
      (variable_assignment_statement
        name: (identifier)
        value: (init_list_expression
          (array_type
            (identifier)
            (primitive_type))
          (init_list
            (integer_literal)
            (integer_literal))))
      (variable_assignment_statement
        name: (identifier)
        name: (identifier)
        value: (identifier))
      (expression_statement
        (call_expression
          (identifier)
          (string_literal
            (string_literal_content)
            (escape_sequence))
          (inferred_init_list
            (init_list
              (identifier)
              (identifier)))))
      (variable_assignment_statement
        name: (identifier)
        type: (array_type
          (integer_literal)
          (primitive_type))
        value: (inferred_init_list
          (init_list
            (integer_literal)
            (integer_literal)
            (integer_literal)
            (integer_literal))))
